CRUD, faltando a parte de inserção e exclusão.

--- a/projeto-integrador/src/main/resources/templates/home.html
+++ b/projeto-integrador/src/main/resources/templates/home.html
@@ -5,7 +5,9 @@
 <body>
 	<header th:replace="modelo/template :: header"></header>
 	
-	<h1>Oi estou usando o Spring Boot!</h1>
+	<div class="container">
+		<h1>Oi estou usando o Spring Boot!</h1>
+	</div>
 	
 	<footer th:replace="modelo/template :: footer"></footer>
 </body>
