--- a/projeto-integrador/src/main/resources/templates/update_usuarios.html
+++ b/projeto-integrador/src/main/resources/templates/update_usuarios.html
@@ -11,11 +11,11 @@
 
 </head>
 <body>
-	
+<center>
 	<div class="container">
 		<h1>Usuario Management System</h1>
 		<hr>
-		<h2>Update</h2>
+		
 
 		<form action="#" th:action="@{/saveUsuarios}" th:object="${usuarios}"
 			method="POST">
@@ -42,6 +42,7 @@
 		<a th:href="@{/}"> Back to Employee List</a>
 		
 	</div>
+</center>
 	
 </body>
 </html>
