--- a/projeto-integrador/src/main/resources/templates/add_usuarios.html
+++ b/projeto-integrador/src/main/resources/templates/add_usuarios.html
@@ -1,35 +1,46 @@
-
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html lang="pt" xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="UTF-8">
 <title>Usuario Management System</title>
+
 <link rel="stylesheet"
 	href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
 	integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
 	crossorigin="anonymous">
+
 </head>
 <body>
+	
 	<div class="container">
 		<h1>Usuario Management System</h1>
 		<hr>
-		<h2>Salvar</h2>
+		<h2>Update</h2>
 
-		<form action="#" th:action="@{/saveUsuarios}" th:object="${usuarios}"
+		<form action="#" th:action="@{/saveUsuarios}" th:object="${user}"
 			method="POST">
-			<input type="text" th:field="*{nome}" placeholder="Nome do Usuário"
+			
+			<!-- Adiciona um campo invisível pra lidar com o update -->
+			<input type = "hidden" th:field="*{id}" />
+			
+			<input type="text"
+				th:field="*{email}" placeholder="email"
 				class="form-control mb-4 col-5"> <input type="text"
-				th:field="*{cpf}" placeholder="CPF do Usuário"
+				th:field="*{password}" placeholder="senha"
 				class="form-control mb-4 col-5"> <input type="text"
-				th:field="*{email}" placeholder="Email do Usuário"
+				th:field="*{firstName}" placeholder="nome"
 				class="form-control mb-4 col-5"> <input type="text"
-				th:field="*{nivel}" placeholder="Nivel do Usuário"
-				class="form-control mb-4 col-5"> <input type="text"
-				th:field="*{telefone}" placeholder="Telefone do Usuário"
+				th:field="*{lastName}" placeholder="sobrenome"
 				class="form-control mb-4 col-5">
 
-			<button type="submit" class="btn btn-info col-2">Salvar</button>
+			<button type="submit" class="btn btn-info col-2">Salvar Dados</button>
 		</form>
+		
+		<hr>
+		
+		<a th:href="@{/users}"> Back </a>
+		
 	</div>
+	
 </body>
 </html>
