--- a/projeto-integrador/src/main/resources/templates/add_usuarios.html
+++ b/projeto-integrador/src/main/resources/templates/add_usuarios.html
@@ -32,6 +32,12 @@
 				class="form-control mb-4 col-5"> <input type="text"
 				th:field="*{lastName}" placeholder="sobrenome"
 				class="form-control mb-4 col-5">
+			<input type="text"
+				th:field="*{cpf}" placeholder="CPF"
+				class="form-control mb-4 col-5">
+			<input type="text"
+				th:field="*{telefone}" placeholder="telefone"
+				class="form-control mb-4 col-5">
 
 			<button type="submit" class="btn btn-info col-2">Salvar Dados</button>
 		</form>
