--- a/projeto-integrador/src/main/resources/templates/users.html
+++ b/projeto-integrador/src/main/resources/templates/users.html
@@ -15,6 +15,7 @@
 				Welcome <b>[[${#request.userPrincipal.principal.fullName}]]</b>
 			</p>
 			<a th:href = "@{/showNewUsuariosForm}" class = "btn btn-primary btn-sm mb-3"> Adicionar Usuario </a>
+			<a th:href = "@{/}" class = "btn btn-primary btn-sm mb-3"> Back </a>
 			<input type="submit" class = "btn btn-primary btn-sm mb-3" value="Sign Out" />
 		</form>
 	</div>
