--- a/projeto-integrador/src/main/resources/templates/index.html
+++ b/projeto-integrador/src/main/resources/templates/index.html
@@ -1,16 +1,12 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head>
+<head th:replace="modelo/template :: head">
 <meta charset="UTF-8">
 <title>Usuario Management System</title>
-<link rel="stylesheet"
-	href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
-	integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
-	crossorigin="anonymous">
 
 </head>
 <body>
-
+<header th:replace="modelo/template :: header"> </header>
 	<div class="container my-2">
 	<h1>Lista de Usuarios</h1>
 		
@@ -86,4 +82,5 @@
 	</div>
 
 </body>
+<footer th:replace="modelo/template :: footer"></footer>
 </html>
