--- a/projeto-integrador/src/main/resources/templates/modelo/template.html
+++ b/projeto-integrador/src/main/resources/templates/modelo/template.html
@@ -9,33 +9,30 @@
 <body>
 
 	<!-- BARRA DE NAVEGAÇÃO -->
-	<header th:fragment="header">
-		<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+	<header th:fragmnet="header">
+		<nav class="navbar navbar-expand-lg navbar-light bg-light">
 		<div class="container">
-			<div class="container-fluid">
-				<a class="navbar-brand" href="#">
-					<strong>MyLogo</strong>
-				</a>
-						
-				<button class="navbar-toggler" type="button"
-					data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-					aria-controls="navbarSupportedContent" aria-expanded="false"
-					aria-label="Toggle navigation">
-					<span class="navbar-toggler-icon"></span>
-				</button>
-
-				<!-- LINKS DO MENU -->
-				<div class="collapse navbar-collapse" id="navbarSupportedContent">
-					<ul class="navbar-nav me-auto mb-2 mb-lg-0">
-						<li class="nav-item"><a class="nav-link active"
-							aria-current="page" th:href="@{/}">Home</a></li>
-						<li class="nav-item"><a class="nav-link" href="#">Cadastros</a></li>
-					</ul>
-				</div>
+			<a class="navbar-brand" href="#"> 
+			<!-- <img th:src="@{/images/logo.png}"> -->
+				<strong> Beyond Learning</strong>
+			</a>
+			
+			<button class="navbar-toggler" type="button" data-toggle="collapse"
+				data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown"
+				aria-expanded="false" aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			
+			<!--  MENU -->
+			<div class="collapse navbar-collapse" id="navbarNavDropdown">
+			
+				<ul class="navbar-nav">
+				
+					<li class="nav-item active"><a class="nav-link"	> Home </li>
+				</ul>
 			</div>
 		</div>
 		</nav>
-
 	</header>
 
 	<!-- CONTEUDO -->
@@ -43,12 +40,12 @@
 
 
 	<!-- RODAPÉ -->
-	<footer th:fragment="footer" class="bg-dark text-center text-white fixed-bottom">
+	<footer th:fragment="footer" class="bg-light text-center text-black fixed-bottom">
 
 		<div class="container">
 			<p>Copyright BeyondLearning &copy; 2021</p>
 		</div>
-		<script type="text/javascript" th:src="@{/js/bootstrap.bundle.min.js}"></script>
+		<script type="text/javascript" th:src="@{/js/jquery-3.2.1.slim.min.js}"></script>
 		<script type="text/javascript" th:src="@{/js/popper.min.js}"></script>
 		<script type="text/javascript" th:src="@{/js/bootstrap.min.js}"></script>
 	</footer>
