--- a/projeto-integrador/src/main/resources/templates/new_usuarios.html
+++ b/projeto-integrador/src/main/resources/templates/new_usuarios.html
@@ -10,6 +10,7 @@
 	crossorigin="anonymous">
 </head>
 <body>
+<header th:replace="modelo/template :: header"> </header>
 <center>
 	<div class="container">
 		<h1>Usuario Management System</h1>
@@ -25,4 +26,5 @@
 	</div>
 </center>
 </body>
+<footer th:replace="modelo/template :: footer"></footer>
 </html>
