--- a/projeto-integrador/src/main/resources/templates/update_usuarios.html
+++ b/projeto-integrador/src/main/resources/templates/update_usuarios.html
@@ -11,6 +11,7 @@
 
 </head>
 <body>
+<header th:replace="modelo/template :: header"> </header>
 <center>
 	<div class="container">
 		<h1>Usuario Management System</h1>
@@ -45,4 +46,5 @@
 </center>
 	
 </body>
+<footer th:replace="modelo/template :: footer"></footer>
 </html>
