--- a/projeto-integrador/src/main/resources/templates/add_usuarios.html
+++ b/projeto-integrador/src/main/resources/templates/add_usuarios.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <title>Usuario Management System</title>
 
-<link rel="stylesheet"
+<link rel="stylesheet" 
 	href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
 	integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
 	crossorigin="anonymous">
@@ -15,35 +15,26 @@
 	<div class="container">
 		<h1>Usuario Management System</h1>
 		<hr>
-		<h2>Update</h2>
+		<h2>Add user</h2>
 
 		<form action="#" th:action="@{/saveUsuarios}" th:object="${user}"
 			method="POST">
 			
 			<!-- Adiciona um campo invisível pra lidar com o update -->
-			<input type = "hidden" th:field="*{id}" />
-			
-			<input type="text"
-				th:field="*{email}" placeholder="email"
-				class="form-control mb-4 col-5"> <input type="text"
-				th:field="*{password}" placeholder="senha"
-				class="form-control mb-4 col-5"> <input type="text"
-				th:field="*{firstName}" placeholder="nome"
-				class="form-control mb-4 col-5"> <input type="text"
-				th:field="*{lastName}" placeholder="sobrenome"
-				class="form-control mb-4 col-5">
-			<input type="text"
-				th:field="*{cpf}" placeholder="CPF"
-				class="form-control mb-4 col-5">
-			<input type="text"
-				th:field="*{telefone}" placeholder="telefone"
-				class="form-control mb-4 col-5">
-
+			<input type ="hidden" th:field="*{id}" />
+			<input type ="hidden" th:field="*{descricao}" />
+			<input type ="hidden" th:field="*{cursos}" />
+			<input type="text" th:field="*{email}" placeholder="email" class="form-control mb-4 col-5"> 
+			<input type="text" th:field="*{password}" placeholder="senha" class="form-control mb-4 col-5"> 
+			<input type="text" th:field="*{firstName}" placeholder="nome" class="form-control mb-4 col-5"> 
+			<input type="text" th:field="*{lastName}" placeholder="sobrenome" class="form-control mb-4 col-5">
+			<input type="text" th:field="*{cpf}" placeholder="CPF" class="form-control mb-4 col-5">
+			<input type="text" th:field="*{telefone}" placeholder="telefone" class="form-control mb-4 col-5">
 			<button type="submit" class="btn btn-info col-2">Salvar Dados</button>
-		</form>
-		
+		</form>	
+			
 		<hr>
-		
+				
 		<a th:href="@{/users}"> Back </a>
 		
 	</div>
