--- a/projeto-integrador/src/main/resources/templates/cursos.html
+++ b/projeto-integrador/src/main/resources/templates/cursos.html
@@ -1,21 +1,23 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html>
 <head>
 	<meta charset="ISO-8859-1">
-	<title>Welcome to Beyond Learning</title>
 	<link rel="stylesheet" type="text/css" href="/webjars/bootstrap/css/bootstrap.min.css" />
 	<script type="text/javascript" src="/webjars/jquery/jquery.min.js"></script>
 	<script type="text/javascript" src="/webjars/bootstrap/js/bootstrap.min.js"></script>
+	<title>Cursos</title>
 </head>
 <body>
 	<div class="container text-center">
-		<h1>Welcome to Beyond Learning</h1>
-		<h3><a th:href="@{/users}">List of Users</a></h3>
-		<h3><a th:href="@{/register}">Register</a></h3>
-		<h3><a th:href="@{/login1}">Login</a></h3>
-		<h3><a th:href="@{/cursos}">Cursos</a></h3>
+		<a th:href="@{/}"> Back </a>
 		<h3><a th:href="@{/cursosAdm}">Administrar Cursos</a></h3>
 	</div>
-
+	<div class="card" style="width: 18rem;">
+  		<img src="..." class="card-img-top" alt="...">
+  		<div class="card-body">
+    	<h5 class="card-title">Card title</h5>
+    	<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+    	<a href="#" class="btn btn-primary">Go somewhere</a>
+  	</div>
 </body>
 </html>
