--- a/projeto-integrador/src/main/resources/templates/register_success.html
+++ b/projeto-integrador/src/main/resources/templates/register_success.html
@@ -10,7 +10,7 @@
 <body>
 	<div class="container text-center">
 		<h3>You have signed up successfully!</h3>
-		<h4><a th:href="@{/login}">Click here to Login</a></h4>
+		<h4><a th:href="@{/login1}">Click here to Login</a></h4>
 	</div>
 	
 </body>
