--- a/projeto-integrador/src/main/resources/templates/signup_form.html
+++ b/projeto-integrador/src/main/resources/templates/signup_form.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
 	<meta charset="ISO-8859-1">
-	<title>Sign Up - CodeJava</title>
+	<title>Sign Up</title>
 	<link rel="stylesheet" type="text/css" href="/webjars/bootstrap/css/bootstrap.min.css" />
 	<script type="text/javascript" src="/webjars/jquery/jquery.min.js"></script>
 	<script type="text/javascript" src="/webjars/bootstrap/js/bootstrap.min.js"></script>
@@ -12,58 +12,55 @@
 		<div>
 			<h1>User Registration - Sign Up</h1>
 		</div>
-		<form th:action="@{/process_register}" th:object="${user}" 
-			method="post" style="max-width: 600px; margin: 0 auto;">
-		<div class="m-3">
-			<div class="form-group row">
-				<label class="col-4 col-form-label">E-mail: </label>
-				<div class="col-8">
-					<input type="email" th:field="*{email}" class="form-control" required />
+		<form th:action="@{/process_register}" th:object="${user}" method="post" style="max-width: 600px; margin: 0 auto;">
+			<input type ="hidden" th:field="*{descricao}" />
+			<input type ="hidden" th:field="*{cursos}" />
+			<div class="m-3">
+				<div class="form-group row">
+					<label class="col-4 col-form-label">E-mail: </label>
+					<div class="col-8">
+						<input type="email" th:field="*{email}" placeholder="Email" class="form-control" required />
+					</div>
+				</div>
+				
+				<div class="form-group row">
+					<label class="col-4 col-form-label">Password: </label>
+					<div class="col-8">
+						<input type="password" th:field="*{password}" placeholder="Senha" class="form-control" required minlength="6" maxlength="10"/>
+					</div>
+				</div>
+				
+				<div class="form-group row">
+					<label class="col-4 col-form-label">First Name: </label>
+					<div class="col-8">
+						<input type="text" th:field="*{firstName}" placeholder="Primeiro nome" class="form-control" required minlength="2" maxlength="20"/>
+					</div>
+				</div>
+				
+				<div class="form-group row">
+					<label class="col-4 col-form-label">Last Name: </label>
+					<div class="col-8">
+						<input type="text" th:field="*{lastName}" placeholder="Ultimo nome" class="form-control" required minlength="4" maxlength="20" />
+					</div>
+				</div>
+				
+				<div class="form-group row">
+					<label class="col-4 col-form-label">CPF: </label>
+					<div class="col-8">
+						<input type="text" th:field="*{cpf}" placeholder="CPF" class="form-control" required minlength="11" maxlength="15"/>
+					</div>
+				</div>
+				
+				<div class="form-group row">
+					<label class="col-4 col-form-label">Telefone: </label>
+					<div class="col-8">
+						<input type="text" th:field="*{telefone}" placeholder="Telefone" class="form-control" required minlength="10" maxlength="20"/>
+					</div>
+				</div>
+					<button type="submit" class="btn btn-primary">Sign Up</button>
 				</div>
 			</div>
-			
-			<div class="form-group row">
-				<label class="col-4 col-form-label">Password: </label>
-				<div class="col-8">
-					<input type="password" th:field="*{password}" class="form-control" 
-							required minlength="6" maxlength="10"/>
-				</div>
-			</div>
-			
-			<div class="form-group row">
-				<label class="col-4 col-form-label">First Name: </label>
-				<div class="col-8">
-					<input type="text" th:field="*{firstName}" class="form-control" 
-							required minlength="2" maxlength="20"/>
-				</div>
-			</div>
-			
-			<div class="form-group row">
-				<label class="col-4 col-form-label">Last Name: </label>
-				<div class="col-8">
-					<input type="text" th:field="*{lastName}" class="form-control" 
-							required minlength="4" maxlength="20" />
-				</div>
-			</div>
-			<div class="form-group row">
-				<label class="col-4 col-form-label">CPF: </label>
-				<div class="col-8">
-					<input type="text" th:field="*{cpf}" class="form-control" 
-							required minlength="11" maxlength="11"/>
-				</div>
-			<div class="form-group row">
-				<label class="col-4 col-form-label">Telefone: </label>
-				<div class="col-8">
-					<input type="text" th:field="*{telefone}" class="form-control" 
-							required minlength="10" maxlength="20"/>
-				</div>
-			</div>
-			</div>
-			
-			<div>
-				<button type="submit" class="btn btn-primary">Sign Up</button> 
-			</div>
-		</div>
+			<a th:href="@{/}"> Back </a>
 		</form>
 	</div>
 </body>
