Upload + Download + CRUD
Upload de Arquivos e Download, juntamente com o CRUD

--- a/projeto-integrador/src/main/resources/templates/index.html
+++ b/projeto-integrador/src/main/resources/templates/index.html
@@ -12,10 +12,10 @@
 		<h1>Welcome to Beyond Learning</h1>
 		<h3><a th:href="@{/users}">List of Users</a></h3>
 		<h3><a th:href="@{/register}">Register</a></h3>
-		<h3><a th:href="@{/login1}">Login</a></h3>
-		<h3><a th:href="@{/cursos}">Cursos</a></h3>
-		<h3><a th:href="@{/cursosAdm}">Administrar Cursos</a></h3>
+		<h3><a th:href="@{/login}">Login</a></h3>
+		<h3><a th:href="@{/registercurso}">Registrar Cursos</a></h3>
+		
 	</div>
-
+	
 </body>
 </html>
