--- a/projeto-integrador/src/main/resources/templates/add_curso.html
+++ b/projeto-integrador/src/main/resources/templates/add_curso.html
@@ -2,9 +2,9 @@
 <html lang="pt" xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="UTF-8">
-<title>Usuario Management System</title>
+<title>Curso Management System</title>
 
-<link rel="stylesheet" 
+<link rel="stylesheet"
 	href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
 	integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
 	crossorigin="anonymous">
@@ -15,27 +15,29 @@
 	<div class="container">
 		<h1>Curso Management System</h1>
 		<hr>
-		<h2>Add Curso</h2>
+		<h2>Update</h2>
 
-		<form action="#" th:action="@{/saveUsuarios}" th:object="${user}"
+		<form action="#" th:action="@{/saveCurso}" th:object="${curso}"
 			method="POST">
 			
 			<!-- Adiciona um campo invisível pra lidar com o update -->
-			<input type ="hidden" th:field="*{id}" />
-			<input type ="hidden" th:field="*{firstName}" />
-			<input type ="hidden" th:field="*{lastName}" />
-			<input type ="hidden" th:field="*{cpf}" />
-			<input type ="hidden" th:field="*{telefone}" />
-			<input type ="hidden" th:field="*{password}" />
-			<input type ="hidden" th:field="*{email}" />
-			<input type="text" th:field="*{cursos}" placeholder="Curso" class="form-control mb-4 col-5"> 
-			<input type="text" th:field="*{descricao}" placeholder="Descricao" class="form-control mb-4 col-5"> 
-			<button type="submit" class="btn btn-info col-2">Salvar Dados</button>
-		</form>	
+			<input type = "hidden" th:field="*{id}" />
 			
+			<input type="text"
+				th:field="*{categoria}" placeholder="Categoria do Curso"
+				class="form-control mb-4 col-5"> <input type="text"
+				th:field="*{descricao}" placeholder="Descrição do Curso"
+				class="form-control mb-4 col-5"> <input type="text"
+				th:field="*{nomecurso}" placeholder="Nome do Curso"
+				class="form-control mb-4 col-5">
+
+
+			<button type="submit" class="btn btn-info col-2">Salvar Dados</button>
+		</form>
+		
 		<hr>
-				
-		<a th:href="@{/cursosAdm}"> Back </a>
+		
+		<a th:href="@{/cursos}"> Voltar </a>
 		
 	</div>
 	
