--- a/projeto-integrador/src/main/resources/templates/cursos.html
+++ b/projeto-integrador/src/main/resources/templates/cursos.html
@@ -1,23 +1,49 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
-	<meta charset="ISO-8859-1">
+	<meta charset="UTF-8">
+	<title>List Cursos</title>
 	<link rel="stylesheet" type="text/css" href="/webjars/bootstrap/css/bootstrap.min.css" />
 	<script type="text/javascript" src="/webjars/jquery/jquery.min.js"></script>
 	<script type="text/javascript" src="/webjars/bootstrap/js/bootstrap.min.js"></script>
-	<title>Cursos</title>
 </head>
 <body>
-	<div class="container text-center">
-		<a th:href="@{/}"> Back </a>
-		<h3><a th:href="@{/cursosAdm}">Administrar Cursos</a></h3>
+<div class="container text-center">
+	<div>
+		<form th:action="@{/logout}" method="post">
+			<p>
+				Welcome <b>[[${#request.userPrincipal.principal.fullName}]]</b>
+			</p>
+			<a th:href = "@{/showNewCursoForm}" class = "btn btn-primary btn-sm mb-3"> Adicionar Curso </a>
+			<input type="submit" class = "btn btn-primary btn-sm mb-3" value="Sign Out" />
+		</form>
 	</div>
-	<div class="card" style="width: 18rem;">
-  		<img src="..." class="card-img-top" alt="...">
-  		<div class="card-body">
-    	<h5 class="card-title">Card title</h5>
-    	<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-    	<a href="#" class="btn btn-primary">Go somewhere</a>
-  	</div>
+	<div>
+		<h1>List of Cursos</h1>
+	</div>
+	
+	<div>
+		<table class="table table-striped table-bordered">
+			<thead class="thead-dark">
+				<tr>
+					<th>User ID</th>
+					<th>Categoria</th>
+					<th>Descrição</th>
+					<th>Nome</th>
+					</tr>
+			</thead>
+			<tbody>
+				<tr th:each="curso: ${listCurso}">
+					<td th:text="${id}">Curso ID</td>
+					<td th:text="${curso.categoria}">Categoria</td>
+					<td th:text="${curso.descricao}">Descrição</td>
+					<td th:text="${curso.nomecurso}">Nome do Curso</td>
+					<td><a th:href="@{/showCursoForUpdate/{id}(id=${curso.id})}" class="btn btn-primary">Atualizar</a>
+						<a th:href="@{/deleteCurso/{id}(id=${curso.id})}" class="btn btn-danger">Deletar</a></td>
+				</tr>
+			</tbody>
+		</table>
+	</div>
+</div>
 </body>
 </html>
