--- a/projeto-integrador/src/main/resources/templates/index.html
+++ b/projeto-integrador/src/main/resources/templates/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-	<meta charset="ISO-8859-1">
+	<meta charset="UTF-8">
 	<title>Welcome to Beyond Learning</title>
 	<link rel="stylesheet" type="text/css" href="/webjars/bootstrap/css/bootstrap.min.css" />
 	<script type="text/javascript" src="/webjars/jquery/jquery.min.js"></script>
@@ -9,11 +9,11 @@
 </head>
 <body>
 	<div class="container text-center">
-		<h1>Welcome to Beyond Learning</h1>
-		<h3><a th:href="@{/users}">List of Users</a></h3>
-		<h3><a th:href="@{/register}">Register</a></h3>
+		<h1>Bem-Vindo a Beyond Learning</h1>
+		<h3><a th:href="@{/users}">Lista de Usuários</a></h3>
+		<h3><a th:href="@{/register}">Registrar</a></h3>
 		<h3><a th:href="@{/login}">Login</a></h3>
-		<h3><a th:href="@{/registercurso}">Registrar Cursos</a></h3>
+		<h3><a th:href="@{/cursos}">Lista de Cursos</a></h3>
 		
 	</div>
 	
