--- a/projeto-integrador/src/main/resources/templates/upload.html
+++ b/projeto-integrador/src/main/resources/templates/upload.html
@@ -10,6 +10,7 @@
 	<div class="container-fluid text-center"> <!-- para centralizar o texto -->
 		<div>
 			<h1>Área de Upload</h1><!--primeiro titulo que aparece(css)-->
+			<a th:href = "@{/}" class = "btn btn-primary btn-sm mb-3"> Voltar </a>
 		</div>
 		
 		<div class="text-success"> <!-- para formatar a cor do texto -->
