--- a/projeto-integrador/src/main/resources/templates/menu_cursos.html
+++ b/projeto-integrador/src/main/resources/templates/menu_cursos.html
@@ -10,10 +10,8 @@
 <body>
 <div class="container text-center">
 	<div>
-		<form th:action="@{/logout}" method="post">
-
-			<input type="submit" class = "btn btn-primary btn-sm mb-3" value="Sair" />
-		</form>
+		<a th:href = "@{/}" class = "btn btn-primary btn-sm mb-3"> Voltar </a>
+		<a th:href = "@{/logout}" class = "btn btn-primary btn-sm mb-3"> Fazer logout </a>
 	</div>
 	<div>
 		<h1>Catálogo de Cursos</h1>
