--- a/projeto-integrador/src/main/resources/templates/users.html
+++ b/projeto-integrador/src/main/resources/templates/users.html
@@ -10,29 +10,28 @@
 <body>
 <div class="container text-center">
 	<div>
-		<form th:action="@{/logout}" method="post">
-			<p>
-				Welcome <b>[[${#request.userPrincipal.principal.fullName}]]</b>
-			</p>
-			<a th:href = "@{/showNewUsuariosForm}" class = "btn btn-primary btn-sm mb-3"> Adicionar Usuario </a>
-			<input type="submit" class = "btn btn-primary btn-sm mb-3" value="Sign Out" />
-		</form>
+		<p>
+			Bem-vindo <b>[[${#request.userPrincipal.principal.fullName}]]</b>
+		</p>
+		<a th:href = "@{/showNewUsuariosForm}" class = "btn btn-primary btn-sm mb-3"> Adicionar Usuario </a>
+		<a th:href = "@{/}" class = "btn btn-primary btn-sm mb-3"> Voltar </a>
+		<a th:href = "@{/logout}" class = "btn btn-primary btn-sm mb-3"> Fazer logout </a>
 	</div>
 	<div>
-		<h1>List of Users</h1>
+		<h1>Lista de Usuarios</h1>
 	</div>
 	
 	<div>
 		<table class="table table-striped table-bordered">
 			<thead class="thead-dark">
 				<tr>
-					<th>User ID</th>
+					<th>ID</th>
 					<th>E-mail</th>
-					<th>First Name</th>
-					<th>Last Name</th>
+					<th>Primeiro Nome</th>
+					<th>Sobrenome</th>
 					<th>CPF</th>
 					<th>Telefone</th>
-					<th>Actions</th>
+					<th>Procedimentos</th>
 				</tr>
 			</thead>
 			<tbody>
@@ -43,8 +42,8 @@
 					<td th:text="${user.lastName}">Last Name</td>
 					<td th:text="${user.cpf}">CPF</td>
 					<td th:text="${user.telefone}">Telefone</td>
-					<td><a th:href="@{/showFormForUpdate/{id}(id=${user.id})}" class="btn btn-primary">Update</a>
-						<a th:href="@{/deleteUsuarios/{id}(id=${user.id})}" class="btn btn-danger">Delete</a></td>
+					<td><a th:href="@{/showFormForUpdate/{id}(id=${user.id})}" class="btn btn-primary">Atualizar</a>
+						<a th:href="@{/deleteUsuarios/{id}(id=${user.id})}" class="btn btn-danger">Apagar</a></td>
 				</tr>
 			</tbody>
 		</table>
