--- a/projeto-integrador/src/main/resources/templates/index.html
+++ b/projeto-integrador/src/main/resources/templates/index.html
@@ -12,10 +12,10 @@
 		<h1>Bem-Vindo a Beyond Learning</h1>
 		<h3><a th:href="@{/users}">Lista de Usuários</a></h3>
 		<h3><a th:href="@{/register}">Registrar</a></h3>
-		<h3><a th:href="@{/login}">Login</a></h3>
-		<h3><a th:href="@{/menu_cursos}">Lista de Cursos</a></h3>
-		<h3><a th:href="@{/cursos}">Registrar Cursos</a></h3>
-		<h3><a th:href="@{/upload}">Biblioteca de Conteudo</a></h3>
+		<h3><a th:href="@{/login}">Realizar Login</a></h3>
+		<h3><a th:href="@{/cursos}">Gerenciar Cursos</a></h3>
+		<h3><a th:href="@{/menu_cursos}">Cursos & Pílulas</a></h3>
+		
 	</div>
 	
 </body>
