--- a/projeto-integrador/src/main/resources/templates/signup_form.html
+++ b/projeto-integrador/src/main/resources/templates/signup_form.html
@@ -12,7 +12,7 @@
 <body>
 	<div class="container text-center">
 		<div>
-			<h1>Cadastre-se</h1>
+			<h1>Registrar</h1>
 		</div>
 		<form th:action="@{/process_register}" th:object="${user}"
 			method="post" style="max-width: 600px; margin: 0 auto;">
@@ -34,7 +34,7 @@
 				</div>
 
 				<div class="form-group row">
-					<label class="col-4 col-form-label">Primeiro nome: </label>
+					<label class="col-4 col-form-label">Primeiro  Nome: </label>
 					<div class="col-8">
 						<input type="text" th:field="*{firstName}"
 							placeholder="Primeiro nome" class="form-control" required
@@ -66,10 +66,13 @@
 							class="form-control" required minlength="10" maxlength="20" />
 					</div>
 				</div>
-				<button type="submit" class="btn btn-primary">Registrar</button>
-				<a th:href="@{/}" class="btn btn-primary"> Voltar </a>
+				<button type="submit" class="btn btn-primary">Cadastrar</button>
+				<a th:href = "@{/}" class = "btn btn-primary"> Voltar</a>
+				
 			</div>
 			</form>
 	</div>
+	
+	
 </body>
 </html>
