--- a/projeto-integrador/src/main/resources/templates/add_curso.html
+++ b/projeto-integrador/src/main/resources/templates/add_curso.html
@@ -1,22 +1,64 @@
 <!DOCTYPE html>
 <html lang="pt" xmlns:th="http://www.thymeleaf.org">
 <head>
-<meta charset="UTF-8">
-<title>Curso Management System</title>
-
-<link rel="stylesheet"
-	href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
-	integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
-	crossorigin="anonymous">
-
+	<meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+        <meta name="description" content="" />
+        <meta name="author" content="" />
+        <title> Add curso- Beyond Learning</title>
+        <!-- Favicon-->
+        <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+        <!-- Bootstrap Icons-->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
+        <!-- Google fonts-->
+        <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans:400,700" rel="stylesheet" />
+        <link href="https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic" rel="stylesheet" type="text/css" />
+        <!-- SimpleLightbox plugin CSS-->
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/SimpleLightbox/2.1.0/simpleLightbox.min.css" rel="stylesheet" />
+        <!-- Core theme CSS (includes Bootstrap)-->
+        <link th:href="@{/css/styles.css}" rel="stylesheet" />
+        <link rel="stylesheet" th:href="@{/css/style2.css}">
+        <script src="https://kit.fontawesome.com/a076d05399.js"> </script>
+		<link rel="stylesheet" type="text/css"
+	href="/webjars/bootstrap/css/bootstrap.min.css" />
+	<script type="text/javascript" src="/webjars/jquery/jquery.min.js"></script>
+	<script type="text/javascript" src="/webjars/bootstrap/js/bootstrap.min.js"></script>
 </head>
-<body>
-	
-	<div class="container">
-		<h1>Curso Management System</h1>
-		<hr>
-		<h2>Update</h2>
+<input type="checkbox" id="check">
+        <label for="check">
+            <i class="fas fa-bars" id="btn"></i>
+            <i class="fas fa-times" id="cancel"></i>
+        </label>
+        <div class="sidebar">
+            <header><h3>Bem Vindo </h3><b>[[${#request.userPrincipal.principal.fullName}]]</b></header>
+           <a th:href = "@{/showNewCursoForm}">
+                <i class="far fa-plus-square"></i>
+                <span>Add Curso</span>  
+            </a>
+            <a th:href = "@{/cursos}">
+                <i class="fas fa-stream"></i>
+                <span>Visão Geral</span>
+            </a>
+            <a href="#">
+                <i class="fas fa-calendar"></i>
+                <span>Eventos</span>
+            </a>
+            <a th:href = "@{/}">
+                <i class="fas fa-sign-out-alt"></i>
+                <span >Sair</span>
+            </a>
+        </div>
 
+<body>
+<header class="masthead">
+
+
+	<div class="container text-center">
+	
+		<h2 class="text-white">Adicionar Dados do Curso</h2>
+		<hr>
+		
+	<center>
 		<form action="#" th:action="@{/saveCurso}" th:object="${curso}"
 			method="POST">
 			
@@ -32,14 +74,25 @@
 				class="form-control mb-4 col-5">
 
 
-			<button type="submit" class="btn btn-info col-2">Salvar Dados</button>
+			<button type="submit" class="btn btn-info col-2" style="background-color:#87ceeb; border:none; margin:5px;">Salvar Dados</button>
 		</form>
 		
 		<hr>
-		
-		<a th:href="@{/cursos}"> Voltar </a>
+		</center>
 		
 	</div>
 	
+	
+</header>
+
+<footer class="bg-light py-5">
+            <div class="container px-4 px-lg-5"><div class="small text-center text-muted">Copyright &copy; 2021 - Beyond Learning</div></div>
+        </footer>
+        <!-- Bootstrap core JS-->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"></script>
+        <!-- SimpleLightbox plugin JS-->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/SimpleLightbox/2.1.0/simpleLightbox.min.js"></script>
+        <!-- Core theme JS-->
+        <script th:src="@{/js/scripts.js}"></script>	
 </body>
 </html>
