--- a/projeto-integrador/src/main/resources/templates/upload.html
+++ b/projeto-integrador/src/main/resources/templates/upload.html
@@ -1,11 +1,57 @@
 <!DOCTYPE html> 
 <html xmlns:th="https://www.thymeleaf.org"> <!--mensagem de aviso-->
 <head>
-	<meta charset="UTF-8">
-	<title>Área de Upload</title> <!--título pagina--> 
-	<link rel="stylesheet" type="text/css" href="/webjars/bootstrap/css/bootstrap.min.css"/>  <!--código do bootstrap-->
+	<meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+        <meta name="description" content="" />
+        <meta name="author" content="" />
+        <title> Upload - Beyond Learning</title>
+        <!-- Favicon-->
+        <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+        <!-- Bootstrap Icons-->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
+        <!-- Google fonts-->
+        <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans:400,700" rel="stylesheet" />
+        <link href="https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic" rel="stylesheet" type="text/css" />
+        <!-- SimpleLightbox plugin CSS-->
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/SimpleLightbox/2.1.0/simpleLightbox.min.css" rel="stylesheet" />
+        <!-- Core theme CSS (includes Bootstrap)-->
+        <link th:href="@{/css/styles.css}" rel="stylesheet" />
+        <link rel="stylesheet" th:href="@{/css/style2.css}">
+        <script src="https://kit.fontawesome.com/a076d05399.js"> </script>
+		<link rel="stylesheet" type="text/css"
+	href="/webjars/bootstrap/css/bootstrap.min.css" />
+	<script type="text/javascript" src="/webjars/jquery/jquery.min.js"></script>
+	<script type="text/javascript" src="/webjars/bootstrap/js/bootstrap.min.js"></script>
 </head>
 <body>
+<input type="checkbox" id="check">
+        <label for="check">
+            <i class="fas fa-bars" id="btn"></i>
+            <i class="fas fa-times" id="cancel"></i>
+        </label>
+        <div class="sidebar">
+          <header><h3>Bem Vindo </h3><b>[[${#request.userPrincipal.principal.fullName}]]</b></header>
+           <a th:href = "@{/showNewCursoForm}">
+                <i class="far fa-plus-square"></i>
+                <span>Add Curso</span>  
+            </a>
+            <a th:href = "@{/cursos}">
+                <i class="fas fa-stream"></i>
+                <span>Visão Geral</span>
+            </a>
+            <a href="#">
+                <i class="fas fa-calendar"></i>
+                <span>Eventos</span>
+            </a>
+            <a th:href = "@{/}">
+                <i class="fas fa-sign-out-alt"></i>
+                <span >Sair</span>
+            </a>
+        </div>
+
+<body>
+<header class="masthead">
 					 <!-- ATUALIZAR O CSS PARA A VERSÃO MAIS RECENTE -->
 	<div class="container-fluid text-center"> <!-- para centralizar o texto -->
 		<div>
@@ -15,8 +61,8 @@
 		<div class="text-success"> <!-- para formatar a cor do texto -->
 			<h3> [[${message}]]</h3>	<!-- mensagem de aviso, puxa a variavel de aviso  -->
 		</div>
-		
-		<div class="row border rounded m-3 p-3">
+		<center>
+		<div class="row border rounded m-3 p-3 text-center" style="width: 800px;">
 			<th:block th:each="doc : ${listDocs}">  <!-- para mostrar os aquivos na tela --> 
 				<div class="col"> 
 					<div>   
@@ -31,7 +77,7 @@
 				</div>
 			</th:block>
 		</div>
-		     
+		     </center>
 	<form th:action="@{/upload}" method="POST" 
 		enctype="multipart/form-data"
 		style="max-width: 600px; margin: 0 auto" 
@@ -48,5 +94,16 @@
 		</div>
 	</form>
 	</div>
+</header>
+
+<footer class="bg-light py-5">
+            <div class="container px-4 px-lg-5"><div class="small text-center text-muted">Copyright &copy; 2021 - Beyond Learning</div></div>
+        </footer>
+        <!-- Bootstrap core JS-->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"></script>
+        <!-- SimpleLightbox plugin JS-->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/SimpleLightbox/2.1.0/simpleLightbox.min.js"></script>
+        <!-- Core theme JS-->
+        <script th:src="@{/js/scripts.js}"></script>
 </body>
 </html>
