--- a/projeto-integrador/src/main/resources/templates/users.html
+++ b/projeto-integrador/src/main/resources/templates/users.html
@@ -1,30 +1,70 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-	<meta charset="UTF-8">
-	<title>List Users</title>
-	<link rel="stylesheet" type="text/css" href="/webjars/bootstrap/css/bootstrap.min.css" />
+	<meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+        <meta name="description" content="" />
+        <meta name="author" content="" />
+        <title> List User - Beyond Learning</title>
+        <!-- Favicon-->
+        <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+        <!-- Bootstrap Icons-->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
+        <!-- Google fonts-->
+        <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans:400,700" rel="stylesheet" />
+        <link href="https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic" rel="stylesheet" type="text/css" />
+        <!-- SimpleLightbox plugin CSS-->
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/SimpleLightbox/2.1.0/simpleLightbox.min.css" rel="stylesheet" />
+        <!-- Core theme CSS (includes Bootstrap)-->
+        <link th:href="@{/css/styles.css}" rel="stylesheet" />
+        <link rel="stylesheet" th:href="@{/css/style2.css}">
+        <script src="https://kit.fontawesome.com/a076d05399.js"> </script>
+		<link rel="stylesheet" type="text/css"
+	href="/webjars/bootstrap/css/bootstrap.min.css" />
 	<script type="text/javascript" src="/webjars/jquery/jquery.min.js"></script>
 	<script type="text/javascript" src="/webjars/bootstrap/js/bootstrap.min.js"></script>
 </head>
 <body>
+<input type="checkbox" id="check">
+        <label for="check">
+            <i class="fas fa-bars" id="btn"></i>
+            <i class="fas fa-times" id="cancel"></i>
+        </label>
+        <div class="sidebar">
+            <header><h3>Bem Vindo </h3><b>[[${#request.userPrincipal.principal.fullName}]]</b></header>
+            <a th:href = "@{/showNewUsuariosForm}">
+                <i class="fas fa-user-alt"></i>
+                <span>Add User</span>  
+            </a>
+            <a th:href="@{/users}">
+                <i class="fas fa-stream"></i>
+                <span>Visão Geral</span>
+            </a>
+            <a href="#">
+                <i class="fas fa-calendar"></i>
+                <span>Eventos</span>
+            </a>
+            <a th:href = "@{/}">
+                <i class="fas fa-sign-out-alt"></i>
+                <span >Sair</span>
+            </a>
+        </div>
+
+<header class="masthead">
 <div class="container text-center">
 	<div>
 		<form th:action="@{/logout}" method="post">
 			<p>
-				Bem Vindo <b>[[${#request.userPrincipal.principal.fullName}]]</b>
+				
 			</p>
-			<a th:href = "@{/showNewUsuariosForm}" class = "btn btn-primary btn-sm mb-3"> Adicionar Usuario </a>
-			<input type="submit" class = "btn btn-primary btn-sm mb-3" value="Sair" />
-			<a th:href = "@{/}" class = "btn btn-primary btn-sm mb-3"> Voltar</a>
 		</form>
 	</div>
 	<div>
-		<h1>Lista de Usuários</h1>
+		<h1 class="text-white">Lista de Usuários</h1>
 	</div>
 	
 	<div>
-		<table class="table table-striped table-bordered">
+		<table class="table table-striped" style="background-color: white; border-radius:20px; border:none;">
 			<thead class="thead-dark">
 				<tr>
 					<th>ID do Usuário</th>
@@ -44,12 +84,13 @@
 					<td th:text="${user.lastName}">Sobrenome</td>
 					<td th:text="${user.cpf}">CPF</td>
 					<td th:text="${user.telefone}">Telefone</td>
-					<td><a th:href="@{/showFormForUpdate/{id}(id=${user.id})}" class="btn btn-primary">Atualizar</a>
+					<td><a th:href="@{/showFormForUpdate/{id}(id=${user.id})}" class="btn btn-primary " style="background-color:#87ceeb; border:none; margin:5px;">Atualizar</a>
 						<a th:href="@{/deleteUsuarios/{id}(id=${user.id})}" class="btn btn-danger">Deletar</a></td>
 				</tr>
 			</tbody>
 		</table>
 	</div>
 </div>
+</header>
 </body>
 </html>
