--- a/projeto-integrador/src/main/resources/templates/index.html
+++ b/projeto-integrador/src/main/resources/templates/index.html
@@ -42,7 +42,7 @@
                     </div>
                     <div class="col-lg-8 align-self-baseline">
                         <p class="text-white-75 mb-5"></p>
-                        <a class="btn btn-primary btn-xl" th:href="@{/login}">Sign in</a>
+                        <a class="btn btn-primary btn-xl" th:href="@{/login}">Sing in</a>
                     </div>
                 </div>
             </div>
