Revert "Rmovendo barra branca e add alguns botões"
This reverts commit 232ec76548073d4ae770f10687edfcf18b09ce4f.

--- a/projeto-integrador/src/main/resources/templates/index.html
+++ b/projeto-integrador/src/main/resources/templates/index.html
@@ -26,9 +26,8 @@
                 <button class="navbar-toggler navbar-toggler-right" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto my-2 my-lg-0">
-                    	<li class="nav-item"><a class="nav-link" th:href="@{/users}">Painel</a></li>
                         <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#singup">Sign up</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#singup">Sing Up</a></li>
                     </ul>
                 </div>
             </div>
@@ -43,7 +42,7 @@
                     </div>
                     <div class="col-lg-8 align-self-baseline">
                         <p class="text-white-75 mb-5"></p>
-                        <a class="btn btn-primary btn-xl" th:href="@{/login}">Sign in</a><br><br>
+                        <a class="btn btn-primary btn-xl" th:href="@{/login}">Sing in</a>
                     </div>
                 </div>
             </div>
